refactor: improve code readability and structure in various classes